<resources>
    <string name="app_name">Water Lillies</string>
    <string name="_2048">2048</string>
    <string name="score">Score</string>
    <string name="score_value">0</string>
    <string name="high_score">High Score</string>
    <string name="high_score_value">0</string>
    <string name="reset">Reset</string>
    <string name="step_back">Step back</string>
    <string name="timer">Timer</string>
    <string name="home">HOME</string>
    <string name="scores">scores</string>
    <string name="water_lilies">water lilies</string>
    <string name="game_2048">game 2048</string>
    <string name="search_scores">SEARCH SCORES</string>
    <string name="search_by_player_name_or_game_name">Search by player name or game name...</string>
    <string name="search">Search</string>
    <string name="search_score">Search Score</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="level_select">Level select</string>
    <string name="play">Play</string>
    <string name="continue_game">Continue</string>
    <string name="levels">Levels</string>
    <string name="level">Level</string>
    <string name="_1">1</string>
    <string name="_00_00">00:00</string>
    <string name="search_menu">Search...</string>
    <string name="username">Username</string>
    <string name="pasword">Pasword</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
</resources>