<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game2048.MainActivity2048"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2048"
        android:gravity="start"
        android:background="@color/barbie_pink"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:gravity="start"
                android:background="@color/barbie_pink"
                android:padding="10dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/score_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/score_value"
                android:textSize="18sp"
                android:padding="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/high_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_score"
                android:gravity="start"
                android:background="@color/barbie_pink"
                android:padding="10dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/high_score_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/high_score_value"
                android:textSize="18sp"
                android:padding="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer"
                android:gravity="start"
                android:background="@color/barbie_pink"
                android:padding="10dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/timer_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="00:00"
                android:textSize="18sp"
                android:padding="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/game_2048_grid_background">

        <TextView
            android:id="@+id/cell_0_0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_0_1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_0_2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_0_3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_1_0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_1_1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_1_2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_1_3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_2_0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_2_1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_2_2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_2_3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_3_0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_3_1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_3_2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>
        <TextView
            android:id="@+id/cell_3_3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/game_2048_cell_background"
            android:padding="10dp"
            android:layout_margin="4dp"/>

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/baby_pink"
            android:padding="10dp"
            android:text="@string/reset"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/button_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/baby_pink"
            android:padding="10dp"
            android:text="@string/step_back"
            android:textColor="@color/black"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/baby_pink"
            android:padding="10dp"
            android:text="Home"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>


</LinearLayout>